--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,10 @@ h2 {
     font-weight: 400;
 }
 
+ul {
+    list-style: none;
+}
+
 .about {
     background-color: #2c2c36;
     color: #e5abf1;
@@ -32,14 +36,53 @@ h2 {
     color: #E5ABF1;
 }
 
+
 .skillsList {
     background-color: #2c2c36;
     color: #E5ABF1;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
+  
 }
+
+ .skillOne {
+     grid-column: 1 / 3;
+     grid-row: 1:
+    
+    
+}
+
+.skillTwo {
+     grid-column: 2 / 4;
+     grid-row: 1 / 3;
+    
+
+    
+}
+
+.skillsList .skillThree {
+    grid-column: 1;
+    grid-row: 2 / 5;
+    
+}
+
+.skillsList .skillFour {
+    grid-column: 3;
+    grid-row: 3;
+}
+
+
 
 .connectList {
     background-color: #2c2c36;
     color: #e5abf1;
+}
+
+.guestInput {
+    display: flex;
 }
 
 input[name="usersName"] {
@@ -48,6 +91,7 @@ input[name="usersName"] {
     margin-right: 30px;
     margin-top: 20px;
     margin-bottom: 20px;
+    
     
 }
 
@@ -76,4 +120,37 @@ footer {
     width: 15%;
 }
 
+.navigationBar {
+    display: flex;
 }
+
+.navigationBar div {
+    background: #613583;
+    color: #f9f06b;
+}
+
+.navigationBar .aboutLink {
+    margin-left: 80px;
+    margin-right: 20px;
+}
+
+.navigationBar .experienceLink {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.navigationBar .skillsLink {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.navigationBar .connectLink {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.navigationBar .messagesLink {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
