--- a/css/index.css
+++ b/css/index.css
@@ -13,12 +13,17 @@ section {
 }
 
 h1 {
-    font-size: 34px;
-    font-weight: 800;
+    font-size: 3em;
+    font-weight: 1900;
 }
 
 h2 {
-    font-size: 28px;
+    font-size: 2.5em;
+    font-weight: 400;
+}
+
+h3 {
+    font-size: 2em;
     font-weight: 400;
 }
 
@@ -29,6 +34,7 @@ ul {
 .about {
     background-color: #2c2c36;
     color: #e5abf1;
+    font-size: 1.4em;
 }
 
 /* .experienceListParent { */
@@ -57,7 +63,7 @@ ul {
 /* } */
 
 .skillsListParent {
-    font-size: 18px;
+    font-size: 1.8em;
 }
 
 .skillsListChild {
@@ -71,7 +77,7 @@ ul {
 
 .skillsListChild li {
     width: 23%;
-    height: 48px;
+    height: 95%;
     margin: 1px 1%;
     text-align: center;
     background-color: #2c2c36;
@@ -79,6 +85,7 @@ ul {
     display: flex;
     algin-items: center;
     justify-content: center;
+    text-size: 1.5em;
 }
 
 
@@ -86,6 +93,7 @@ ul {
 .connectList {
     background-color: #2c2c36;
     color: #e5abf1;
+    font-size: 1.5em;
 }
 .connectList a {
     color: #f9f06b;
@@ -102,6 +110,8 @@ input[name="usersName"] {
     margin-right: 30px;
     margin-top: 20px;
     margin-bottom: 20px;
+    height: 4vh;
+    font-size: 1.5em;
     
     
 }
@@ -112,7 +122,10 @@ input[name="usersEmail"] {
     color: #e5abf1;
     margin-top: 20px;
     margin-bottom: 20px;
+    height: 4vh;
+    font-size: 1.5em;
 }
+
 
 textarea[name="usersMessage"] {
     display: grid;
@@ -120,17 +133,24 @@ textarea[name="usersMessage"] {
     color: #e5abf1;
     margin-top: 20px;
     margin-bottom: 20px;
+    height: 20vh;
+    width: 50vw;
+    font-size: 2em;
 }
 
 .submit{
     background: #613583;
     color: #f9f06b;
+    height: 6vh;
+    width: 9vh;
+    font-size: 1.6em;
 }
 
 footer {
     background-color: #613583;
     color: #f9f06b;
     width: 15%;
+    font-size: 1.5em;
 }
 
 @media (min-width: 720px) {
@@ -176,6 +196,32 @@ footer {
     margin-left: 20px;
     margin-right: 20px;
 }
+
+.experienceListParent {
+    font-size:1.8em;
+}
+
+.experienceListChild {
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+    margin: 5px;
+    padding: 0;
+    height: 100px;
+}
+
+.experienceListChild li {
+     width: 23%;
+    height: 48px;
+    margin: 1px 1%;
+    text-align: center;
+    background-color: #2c2c36;
+    color: #e5abf1;
+    display: flex;
+    algin-items: center;
+    justify-content: center;
+}
+
 }
 
 @media (max-width: 719px) {
@@ -237,7 +283,7 @@ footer {
 
 .experienceListChild li {
      width: 23%;
-    height: 48px;
+    height: 95%;
     margin: 1px 1%;
     text-align: center;
     background-color: #2c2c36;
@@ -246,6 +292,7 @@ footer {
     algin-items: center;
     justify-content: center;
 }
+
 }
 
 @media (max-width: 560px) {
@@ -255,6 +302,7 @@ footer {
 
     .experienceListChild {
 	display: grid;
+	
     }
 
     .skillsListChild {
@@ -268,6 +316,7 @@ footer {
 .projects {
     background-color: #2c2c36;
     color: #e5abf1;
+    font-size: 1.5em;
     
 }
 
